Publish process and tests improvement
